/*
 * Licensed to the Fintech Open Source Foundation (FINOS) under one or
 * more contributor license agreements. See the NOTICE file distributed
 * with this work for additional information regarding copyright ownership.
 * FINOS licenses this file to you under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with the
 * License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.config;

option java_package = "org.finos.tracdap.config";
option java_outer_classname = "JobConfigProto";
option java_multiple_files = true;

import "tracdap/metadata/job.proto";
import "tracdap/metadata/object_id.proto";
import "tracdap/metadata/object.proto";;
import "tracdap/metadata/tag.proto";


message JobConfig {

    // ID and definition of the job being submitted
    metadata.TagHeader jobId = 1;
    metadata.JobDefinition job = 2;

    // Metadata needed to execute the job (objects referred to in the job definition)
    map<string, metadata.TagHeader> objectMapping = 3;
    map<string, metadata.ObjectDefinition> objects = 4;
    map<string, metadata.Tag> tags = 5;

    // Preallocated IDs for job outputs
    metadata.TagHeader resultId = 6;
    repeated metadata.TagHeader preallocatedIds = 7;

    // Allow setting per-job configuration
    map<string, string> properties = 8;
}
